export const snapshot = {};

snapshot[`rehype-pagefind-indexing: condition check > should attach attrs based on a tagName 1`] = `
'<h1>Heading Level 1 (Title)</h1>
<h2>Heading Level 2 (Section)</h2>
<h2>Links and Images</h2>
<p><a href="https://www.google.com">Visit Google</a></p>
<p><img src="https://via.placeholder.com/150" alt="Sample Image" id="test-id" class="test-class1 test-class2"></p>
<h2>Code</h2>
<p>Inline code looks like this: <code data-pagefind-ignore="all">console.log("Hello, world!");</code></p>
<p>Multi-line code block:</p>
<pre><code class="language-javascript" data-pagefind-ignore="all">function greet() {
  console.log("Hello, world!");
}
</code></pre>'
`;

snapshot[`rehype-pagefind-indexing: condition check > should attach attrs based on a tagName and an id 1`] = `
'<h1>Heading Level 1 (Title)</h1>
<h2>Heading Level 2 (Section)</h2>
<h2>Links and Images</h2>
<p><a href="https://www.google.com">Visit Google</a></p>
<p><img src="https://via.placeholder.com/150" alt="Sample Image" id="test-id" class="test-class1 test-class2" data-pagefind-ignore="all"></p>
<h2>Code</h2>
<p>Inline code looks like this: <code>console.log("Hello, world!");</code></p>
<p>Multi-line code block:</p>
<pre><code class="language-javascript">function greet() {
  console.log("Hello, world!");
}
</code></pre>'
`;

snapshot[`rehype-pagefind-indexing: condition check > should attach attrs based on a tagName and multiple classes (matchAll) 1`] = `
'<h1>Heading Level 1 (Title)</h1>
<h2>Heading Level 2 (Section)</h2>
<h2>Links and Images</h2>
<p><a href="https://www.google.com">Visit Google</a></p>
<p><img src="https://via.placeholder.com/150" alt="Sample Image" id="test-id" class="test-class1 test-class2" data-pagefind-ignore="all"></p>
<h2>Code</h2>
<p>Inline code looks like this: <code>console.log("Hello, world!");</code></p>
<p>Multi-line code block:</p>
<pre><code class="language-javascript">function greet() {
  console.log("Hello, world!");
}
</code></pre>'
`;

snapshot[`rehype-pagefind-indexing: condition check > should NOT attach attrs based on a tagName and multiple classes (matchAll) 1`] = `
'<h1>Heading Level 1 (Title)</h1>
<h2>Heading Level 2 (Section)</h2>
<h2>Links and Images</h2>
<p><a href="https://www.google.com">Visit Google</a></p>
<p><img src="https://via.placeholder.com/150" alt="Sample Image" id="test-id" class="test-class1 test-class2"></p>
<h2>Code</h2>
<p>Inline code looks like this: <code>console.log("Hello, world!");</code></p>
<p>Multi-line code block:</p>
<pre><code class="language-javascript">function greet() {
  console.log("Hello, world!");
}
</code></pre>'
`;

snapshot[`rehype-pagefind-indexing: condition check > should attach attrs based on a tagName and a class (matchAny) 1`] = `
'<h1>Heading Level 1 (Title)</h1>
<h2>Heading Level 2 (Section)</h2>
<h2>Links and Images</h2>
<p><a href="https://www.google.com">Visit Google</a></p>
<p><img src="https://via.placeholder.com/150" alt="Sample Image" id="test-id" class="test-class1 test-class2" data-pagefind-ignore="all"></p>
<h2>Code</h2>
<p>Inline code looks like this: <code>console.log("Hello, world!");</code></p>
<p>Multi-line code block:</p>
<pre><code class="language-javascript">function greet() {
  console.log("Hello, world!");
}
</code></pre>'
`;

snapshot[`rehype-pagefind-indexing: condition check > should NOT attach attrs based on a tagName and a class (matchAny) 1`] = `
'<h1>Heading Level 1 (Title)</h1>
<h2>Heading Level 2 (Section)</h2>
<h2>Links and Images</h2>
<p><a href="https://www.google.com">Visit Google</a></p>
<p><img src="https://via.placeholder.com/150" alt="Sample Image" id="test-id" class="test-class1 test-class2"></p>
<h2>Code</h2>
<p>Inline code looks like this: <code>console.log("Hello, world!");</code></p>
<p>Multi-line code block:</p>
<pre><code class="language-javascript">function greet() {
  console.log("Hello, world!");
}
</code></pre>'
`;

snapshot[`should attach \`data-pagefind-ignore\` to the element 1`] = `
'<h1>Heading Level 1 (Title)</h1>
<h2>Heading Level 2 (Section)</h2>
<h2>Links and Images</h2>
<p><a href="https://www.google.com">Visit Google</a></p>
<p><img src="https://via.placeholder.com/150" alt="Sample Image" id="test-id" class="test-class1 test-class2"></p>
<h2>Code</h2>
<p>Inline code looks like this: <code data-pagefind-ignore="all">console.log("Hello, world!");</code></p>
<p>Multi-line code block:</p>
<pre><code class="language-javascript" data-pagefind-ignore="all">function greet() {
  console.log("Hello, world!");
}
</code></pre>'
`;

snapshot[`should attach \`data-pagefind-index-attrs\` to the element 1`] = `
'<h1>Heading Level 1 (Title)</h1>
<h2>Heading Level 2 (Section)</h2>
<h2>Links and Images</h2>
<p><a href="https://www.google.com">Visit Google</a></p>
<p><img src="https://via.placeholder.com/150" alt="Sample Image" id="test-id" class="test-class1 test-class2" data-pagefind-index-attrs="title,alt"></p>
<h2>Code</h2>
<p>Inline code looks like this: <code>console.log("Hello, world!");</code></p>
<p>Multi-line code block:</p>
<pre><code class="language-javascript">function greet() {
  console.log("Hello, world!");
}
</code></pre>'
`;

snapshot[`should attach \`data-pagefind-body\` to the element 1`] = `
'<h1>Heading Level 1 (Title)</h1>
<h2>Heading Level 2 (Section)</h2>
<h2>Links and Images</h2>
<p data-pagefind-body="true"><a href="https://www.google.com">Visit Google</a></p>
<p data-pagefind-body="true"><img src="https://via.placeholder.com/150" alt="Sample Image" id="test-id" class="test-class1 test-class2"></p>
<h2>Code</h2>
<p data-pagefind-body="true">Inline code looks like this: <code>console.log("Hello, world!");</code></p>
<p data-pagefind-body="true">Multi-line code block:</p>
<pre><code class="language-javascript">function greet() {
  console.log("Hello, world!");
}
</code></pre>'
`;
